--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>bla bla </header>
     <main>
-    <nav>je suis la nav </nav>
+    <nav>je suis la nav sysysyy </nav>
 <section>
 
     <p>section 1 </p>
@@ -23,7 +23,7 @@
 <section>
 
   <p>section 2</p>
-  
+
   <div>
     <div>1</div>
  </div>
